--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ openai==1.54.3
 pandas==2.2.3
 pillow==11.0.0
 plotly==5.24.1
+pycountry==24.6.1
 pydantic==2.9.2
 pydantic-settings==2.6.1
 pydantic_core==2.23.4
