--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ h11==0.14.0
 h2==4.1.0
 langchain==0.3.7
 langchain-community==0.3.5
+langchain-google-genai==2.0.4
 matplotlib-inline==0.1.7
 numpy==1.26.4
 openai==1.54.3
