--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,6 @@ requests-toolbelt==1.0.0
 SpeechRecognition==3.11.0
 streamlit==1.40.0
 streamlit-option-menu==0.4.0
+youtube-transcript-api==0.6.2
+yt-dlp==2024.11.4
+chromadb==0.5.18
